<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/grades"
            android:title="@string/grades" />
        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/registration"
            android:title="@string/course_registration" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/classschedule"
            android:title="@string/class_schedule" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/news"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_lecturers"
                android:icon="@drawable/lecturer"
                android:title="@string/lecturers" />
            <item
                android:id="@+id/nav_coursemates"
                android:icon="@drawable/classmates"
                android:title="@string/course_mates" />
            <item
                android:id="@+id/nav_students"
                android:icon="@drawable/students"
                android:title="@string/students" />
        </menu>
    </item>

</menu>
