<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".AboutPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/gradient_background"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/nigeria_flag"
                android:layout_marginEnd="20dp" />

            <ImageView
                android:id="@+id/owner"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:src="@drawable/person"
                android:background="@drawable/text_view_shape" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/school_logo"
                android:layout_marginTop="40dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/own"
            android:textAllCaps="false"
            android:textColor="@color/purple"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner"
            android:textColor="@color/purple"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/purple">
            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/person"
            android:background="@drawable/text_view_shape" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/bishop"
            android:textAllCaps="false"
            android:textColor="@color/purple"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pro_chancellor"
            android:textColor="@color/purple"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textStyle="bold"/>


        <androidx.cardview.widget.CardView
            android:layout_width="175dp"
            android:layout_height="3dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple"
            android:layout_marginEnd="10dp">
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/person"
            android:background="@drawable/text_view_shape" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/vc_vname"
            android:textAllCaps="false"
            android:textColor="@color/purple"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vc"
            android:textColor="@color/purple"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:background="@drawable/text_view_shape"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/about_rnu"
            android:textColor="@color/purple"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="10dp"
            android:text="@string/locate"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:textAlignment="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_view_shape"
            android:text="@string/location"
            android:textColor="@color/purple"
            android:textStyle="bold"
            android:padding="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="10dp"
            android:text="@string/college"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text= "@string/col_no"
            android:textColor="@color/purple"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_shape"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:text="@string/law"
                android:textColor="@color/purple"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:background="@drawable/text_view_shape"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:text="@string/nas"
            android:textColor="@color/purple"
            android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/down_arrow"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mcb"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bcm"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/purple"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/csc"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/ip"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/purple" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_shape"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:text="@string/cmass"
                android:textColor="@color/purple"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/down_arrow"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eco"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mass_comm"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hir"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psy"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textColor="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psc"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/purple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/baf"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/purple" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>