<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Enter Your Details Below"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_surname_input"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/H1"/>

    <EditText
        android:id="@+id/register_other_names_input"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/H2"/>

    <EditText
        android:id="@+id/register_department_input"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:maxLength="20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/H4"/>

    <EditText
        android:id="@+id/register_faculty_input"
        android:maxLines="1"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/H5"/>

    <EditText
        android:id="@+id/register_reg_number_input"
        android:maxLength="20"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/H6"/>

        <EditText
            android:id="@+id/student_id_input"
            android:maxLines="1"
            android:maxLength="6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:hint="@string/H7"/>

    <EditText
        android:id="@+id/register_password_input"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/H8"/>

    <Button
        android:id="@+id/register_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="Submit"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:background="@drawable/login_page_button"/>


    </LinearLayout>

</LinearLayout>